--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "prismagram-frontend",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://localhost:8080/nodejs_project/PrismaGram-frontend/build",
   "dependencies": {
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
